# pyupdater-trial

./: client_config.py  main.py  pyproject.toml
.pyupdater/: config.pyu
