[tool.poetry]
name = "pyupdater-trial"
version = "0.1.0"
description = ""
authors = ["PrivateOmega <privateomega@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyUpdater = "^4.0"
PyUpdater-SCP-Plugin = "^4.0.3"
PyUpdater-S3-Plugin = "^4.1.2"
dsdev-utils = "1.0.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
macholib = "^1.14"

[tool.poe.tasks]
build = "pyupdater build --hidden-import=pkg_resources.py2_warn --app-version 0.0.1 main.py"
package = "pyupdater pkg --process --sign"
_publish = "pyupdater upload --service scp"
release = ["build", "package", "_publish"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
